maybe it fixed the animation on mobile

--- a/less/home_styles.less
+++ b/less/home_styles.less
@@ -77,7 +77,7 @@ header.hero{
     }
 
     @media screen and ( orientation : portrait) and ( max-width: 575px){
-      margin-top: 100px;
+      margin-top: 50px;
     }
 
     @media screen and ( orientation : portrait) and ( min-width: 576px){
